[package]
name = "colink-server"
version = "0.1.10"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures-lite = "1.12"
hex = "0.4"
jsonwebtoken = "7.2"
lapin = "2.1"
openssl = "0.10"
passwords = "3.1"
prost = "0.10"
rand = { version = "0.8.4", features = ["std_rng"] }
reqwest = { version = "0.11", features = ["json"] }
secp256k1 = { version = "0.21.2", features = ["rand-std"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "rt", "fs"] }
tonic = { version = "0.7", features = ["tls", "tls-roots"] }
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = "0.10"
tonic-build = "0.7"
