[package]
name = "colink-server"
version = "0.3.7"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.3", features = ["derive", "env"] }
flate2 = "1.0"
fs4 = { version = "0.6", features = ["sync"] }
futures-lite = "1.13"
hex = "0.4"
jsonwebtoken = "7.2"
lapin = "2.2"
passwords = "3.1"
prost = "0.11"
rand = { version = "0.8", features = ["std_rng"] }
redis = { version = "0.23", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
secp256k1 = { version = "0.27", features = ["rand-std", "recovery"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
tar = "0.4"
tempfile = "3"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "rt", "fs"] }
tokio-stream = "0.1"
toml = "0.5"
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
tonic-web = "0.9"
tower-http = { version = "0.3", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.9"
